monitoring/dozzle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dozzle
  namespace: dozzle
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: dozzle
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dozzle
        dev.dozzle.group: monitoring
        dev.dozzle.name: dozzle
    spec:
      serviceAccountName: dozzle
      enableServiceLinks: false
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: dozzle
          # renovate: datasource=docker depName=amir20/dozzle
          image: docker.io/amir20/dozzle:v11.1.0@sha256:7c4fb7f8124f5dea15ade881535cc19cc9a03e66639fd28154ff43a93b78944b
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
          volumeMounts:
            - name: data
              mountPath: /data
            - name: default-profile
              mountPath: /data/__default__
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dozzle-data
        - name: default-profile
          configMap:
            name: dozzle-default-profile
