monitoring/dozzle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle
  namespace: dozzle
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dozzle
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
